fix: fix overflow

--- a/src/pages/leaderboards/styles.module.css
+++ b/src/pages/leaderboards/styles.module.css
@@ -2,7 +2,6 @@ html,
 body {
   height: 100%;
   margin: 0;
-  overflow-y: hidden;
 }
 
 .mainRankingList {
